project2/test/test_2_1.out
Error type 1 at Line 4: undefined variable: c
Error type 6 at Line 5: left side in assignment is rvalue
Error type 1 at Line 7: undefined variable: c