project2/test/test_2_1.spl
int foo()
{
  int a = 10;
  int b = 11 + c;
  6 = a;
  float a = 1.0;
  return c;
}